UriResolver changed
added code for backward compatibility